--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
     "expo": "~48.0.15",
+    "expo-location": "^15.1.1",
     "expo-status-bar": "~1.4.4",
+    "geolib": "^3.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
