--- a/package.json
+++ b/package.json
@@ -6,23 +6,32 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.4.0",
+    "axios-mock-adapter": "^1.21.4",
+    "babel-jest": "^29.5.0",
+    "babel-preset-expo": "^9.3.2",
     "expo": "~48.0.15",
     "expo-location": "^15.1.1",
     "expo-status-bar": "~1.4.4",
+    "jest": "^29.5.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-gesture-handler": "^2.10.0",
     "react-native-safe-area-context": "^4.5.2",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
